@@ -1,4 +1,5 @@
 Changes
+INSTALL
 MANIFEST
 Makefile.PL
 lib/LEOCHARRE/Dir.pm
