@@ -1,13 +1,15 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         LEOCHARRE-Dir
-version:      1.02
-version_from: lib/LEOCHARRE/Dir.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                LEOCHARRE-Dir
+version:             1.03
+abstract:            ~
+license:             ~
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
     Cwd:                           3
     Exporter:                      5
     Test::Simple:                  0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
